# southesk

./: .betterleaks.toml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/southesk/: Cargo.toml  build.rs  release.toml
crates/southesk-macros/: Cargo.toml
crates/southesk-macros/src/: lib.rs
crates/southesk-macros/tests/: mcp_schema.rs  tools.json
crates/southesk-macros/tests/expand/: tools.expanded.rs  tools.rs
crates/southesk/data/montrose-api/: api.json  check-for-updates.sh
crates/southesk/examples/: create_balanced_trade.rs  create_trade_towards_allocation.rs  low_level.rs  low_level_api.rs  plaintext_creds.rs  raw_api.rs  show_data.rs  watchlists.rs
crates/southesk/src/: auth_handler.rs  error.rs  lib.rs  low_level.rs  raw.rs  types.rs
crates/southesk/src/client/: connected.rs  disconnected.rs  mod.rs
crates/southesk/src/cred_store/: keyring_cred_store.rs  mod.rs  plaintext_cred_store.rs
crates/southesk/tests/: session.rs
examples/: clean_disconnect.rs  create-balanced-trade.rs  create-trade-towards-allocation.rs  create-trade.rs  plaintext_creds.rs  raw-api.rs  search-instrument.rs  show-data.rs  watchlists.rs
examples/devel/: introspect.rs
scripts/montrose-api/: .gitignore  api.json  api.txt  check-for-updates.sh
src/: auth_callback.rs  auth_handler.rs  client.rs  cred_store.rs  keyring_cred_store.rs  lib.rs  oauth_handler.rs  plain_cred_store.rs  raw.rs  result.rs  types.rs
src/client/: connected.rs  connection.rs  disconnected.rs  mod.rs  tools.rs
src/cred_store/: keyring_cred_store.rs  mod.rs  plaintext_cred_store.rs
tests/: session.rs
