[package]
name = "southesk"
version = "0.0.4"
edition = "2024"
license = "MIT"
description = "A Rust client library for the Montrose MCP API."
repository = "https://github.com/thomasa88/southesk"
keywords = ["montrose", "trading", "finance", "api", "client"]
categories = ["finance"]
exclude = ["scripts/*"]

[features]
default = ["keyring"]
keyring = [
    "dep:keyring-core",
    "dep:dbus-secret-service-keyring-store",
    "dep:windows-native-keyring-store",
    "dep:apple-native-keyring-store",
]
# Internal feature to enable development functions for exploring the MCP API
__dev = []

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
derive_more = { version = "2.1.1", features = ["as_ref", "display"] }
etcetera = "0.11.0"
keyring-core = { version = "1.0.0", optional = true }
reqwest = "0.13.2"
rmcp = { version = "1.7.0", default-features = false, features = [
    "transport-async-rw",
    "client",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "auth",
    "macros",
] }
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = "1.0.228"
# preserve_order: Print data in a nice order when using introspect()
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_urlencoded = "0.7.1"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["serde"] }
webbrowser = "1.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = [
    "vendored",
    "crypto-rust",
], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.0.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = [
    "keychain",
    "protected",
], optional = true }

[dev-dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
tokio-test = "0.4.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[[example]]
name = "devel-introspect"
path = "examples/devel/introspect.rs"
required-features = ["__dev"]
