[workspace]
resolver = "3"
members = ["crates/southesk", "crates/southesk-macros"]
default-members = ["crates/southesk"]

[workspace.lints.clippy]
# Groups are set to lower priority than the individual lints that we allow.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
too_many_lines = "allow"

[workspace.lints.rust]

[workspace.package]
version = "0.0.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/thomasa88/southesk"
keywords = ["montrose", "trading", "finance", "api", "client"]
categories = ["finance"]

[workspace.dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
axum = "0.8.8"
derive_more = { version = "2.1.1" }
etcetera = "0.11.0"
indexmap = { version = "2.14.0", features = ["serde"] }
keyring-core = { version = "1.0.0" }
reqwest = "0.13.2"
rmcp = { version = "1.7.0", default-features = false }
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
# preserve_order: Print data in a nice order when using introspect()
serde_json = { version = "1.0.149" }
serde_urlencoded = "0.7.1"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0" }
tokio-test = "0.4.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["serde"] }
webbrowser = "1.2.0"

# macros
macrotest = "1.2.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
