[package]
name = "southesk"
description = "A Rust client library for the Montrose MCP API."
exclude = ["scripts/*"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = ["keyring", "high-api"]
keyring = [
    "dep:keyring-core",
    "dep:dbus-secret-service-keyring-store",
    "dep:windows-native-keyring-store",
    "dep:apple-native-keyring-store",
]
low-api = []
high-api = []
raw-api = []
# Internal feature to enable development functions for exploring the MCP API
__dev = []

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
derive_more = { workspace = true, features = ["as_ref", "display"] }
etcetera = { workspace = true }
keyring-core = { workspace = true, optional = true }
reqwest = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "transport-async-rw",
    "client",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "auth",
    "macros",
] }
rust_decimal = { workspace = true }
serde = { workspace = true }
# preserve_order: Print data in a nice order when using introspect()
serde_json = { workspace = true, features = ["preserve_order"] }
serde_urlencoded = { workspace = true }
serde_with = { workspace = true }
# Split over multiple lines for cargo-release replace
southesk-macros.path = "../southesk-macros"
southesk-macros.version = "0.0.6"
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true }
uuid = { workspace = true }
webbrowser = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = [
    "vendored",
    "crypto-rust",
], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.0.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = [
    "keychain",
    "protected",
], optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "low_level_api"
required-features = ["low-api"]

[[example]]
name = "raw_api"
required-features = ["raw-api"]

[[example]]
name = "devel-introspect"
path = "examples/devel/introspect.rs"
required-features = ["__dev"]
